# ssmjax

./: LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
notebooks/: jax_basic_playground.ipynb
