[build-system]
requires = ["setuptools", "wheel"]

[project.urls]
"Homepage"="https://github.com/AlexanderFengler/ssmjax"
"Bug Tracker"="https://github.com/AlexanderFengler/ssmjax/issues"

[project]
name = "ssmjax"
version = "0.0.1"
authors = [{name = "Alexander Fengler", email = "alexander_fengler@brown.edu"}]
description = "Package to simulate data from a variety of Sequential Sampling Models commonly used in Cognitive Science. Focus on GPU hardware!"
readme = "README.md"
requires-python = ">3.9"
classifiers= [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
    ]
dependencies=[
        "NumPy >= 1.17.0",
        "SciPy >= 1.6.3",
        "pandas >= 1.2.4",
        "jax >= 0.4.2",
    ]
keywords=["Simulations", "Numerical Computation", "GPU", "Cognitive Science", "Neuroscience"]

[project.optional-dependencies]
dev = ["black", "ruff", "pytest"]